--- a/metro/src/scss/sections/_section-tariff.scss
+++ b/metro/src/scss/sections/_section-tariff.scss
@@ -158,6 +158,7 @@
       padding-bottom: 4.4rem;
     }
     .tariff-content {
+      width: 100%;
       max-width: 100%;
       flex-wrap: wrap;
       justify-content: space-between;
