fix errors add tooltip

--- a/metro/src/scss/sections/_footer.scss
+++ b/metro/src/scss/sections/_footer.scss
@@ -9,7 +9,7 @@
       width: 100%;
       max-width: 100%;
       text-align: center;
-      color: $color-gray0;
+      color: #fff;
       font-size: 1.6rem;
       line-height: 1.38;
       font-family: $font1;
