--- a/metro/src/scss/sections/_section-about.scss
+++ b/metro/src/scss/sections/_section-about.scss
@@ -94,27 +94,44 @@
         max-width: 100%;
       }
       &_train {
-        min-height: 80%;
+        min-height: 21vw;
         bottom: 0rem;
         border-bottom-left-radius: 20% 100%;
         border-top-left-radius: 20% 100%;
         // background-color: aqua;
         img {
-          width: 50rem;
+          width: 30vw;
+          max-width: 50rem;
           bottom: 1rem;
-          left: -.5rem;
+          left: -0.5rem;
         }
         .ellipse {
-          width: 15rem;
-          height: 70%;
+          // width: 15rem;
+          // height: 70%;
+          width: 12vw;
+          height: 17vw;
         }
       }
 
       &_schema {
         z-index: 0;
-        width: 100%;
-        right: 0rem;
-        top: 2rem;
+        width: 25vw;
+        max-width: none;
+        right: 5rem;
+        top: auto;
+        bottom: -1rem;
+        // position: relative;
+        img {
+          width: 100%;
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: 4%;
+          width: 100%;
+          min-height: 50%;
+          background-image: linear-gradient(to top, #ffffff, transparent);
+        }
       }
     }
   }
