--- a/metro/src/scss/_sections.scss
+++ b/metro/src/scss/_sections.scss
@@ -100,4 +100,5 @@
 @import "sections/section-marketplaces";
 @import "sections/section-benefits";
 @import "sections/section-mixx";
+@import "sections/tooltip";
 @import "sections/footer";
