--- a/metro/src/scss/sections/_section-mixx.scss
+++ b/metro/src/scss/sections/_section-mixx.scss
@@ -68,6 +68,9 @@
   }
 
   @media (min-width: 600px) {
+    .section-layer {
+      padding-bottom: 3rem;
+    }
     &::before,
     &::after {
       content: "";
