--- a/metro/src/scss/sections/_tooltip.scss
+++ b/metro/src/scss/sections/_tooltip.scss
@@ -36,6 +36,7 @@
     background-color: transparent;
     border: 0.2rem solid #3fcbff;
     border-radius: 50%;
+    padding: 0;
     width: 2.2rem;
     height: 2.2rem;
     box-sizing: border-box;
