--- a/metro/src/scss/sections/_tooltip.scss
+++ b/metro/src/scss/sections/_tooltip.scss
@@ -13,16 +13,14 @@
   background-image: linear-gradient(231deg, #75d3f3 24.34%, #4c91ef 76.87%);
   width: 25.6rem;
   z-index: 0;
-  opacity: 0;
-  pointer-events: none;
+  display: none;
   transition: 0.4s;
   &.opened {
     z-index: 10;
-    opacity: 1;
-    pointer-events: all;
-    &::before {
-      opacity: 1;
-    }
+    display: block;
+    // &::before {
+    //   opacity: 1;
+    // }
   }
   &::before {
     content: "";
