--- a/metro/src/scss/sections/_section-mixx.scss
+++ b/metro/src/scss/sections/_section-mixx.scss
@@ -7,6 +7,8 @@
     width: 18rem;
     height: 18rem;
     border-radius: 50%;
+    will-change: filter;
+    -webkit-filter: blur(50px);
     filter: blur(50px);
     z-index: 1;
   }
@@ -78,7 +80,6 @@
       width: 8rem;
       height: 8rem;
       border-radius: 50%;
-      filter: blur(70px);
     }
     &::before {
       background-color: #3fcbff;
