--- a/metro/src/scss/sections/_tooltip.scss
+++ b/metro/src/scss/sections/_tooltip.scss
@@ -5,22 +5,23 @@
 }
 .tooltip {
   position: absolute;
+  z-index: -1;
+  opacity: 0;
+  transition: 0.4s;
   bottom: 3rem;
   left: 43%;
-  transform: translateX(-43%);
+  transform: translateX(-43%) scale(0);
   border-radius: 16px;
   padding: 1.2rem;
   background-image: linear-gradient(231deg, #75d3f3 24.34%, #4c91ef 76.87%);
   width: 25.6rem;
-  z-index: 0;
-  display: none;
-  transition: 0.4s;
   &.opened {
     z-index: 10;
-    display: block;
-    // &::before {
-    //   opacity: 1;
-    // }
+    opacity: 1;
+    transform: translateX(-43%) scale(1);
+    &::before {
+      opacity: 1;
+    }
   }
   &::before {
     content: "";
