fix tooltip safari - opacity issue - test

--- a/metro/src/scss/sections/_section-mixx.scss
+++ b/metro/src/scss/sections/_section-mixx.scss
@@ -7,7 +7,7 @@
     width: 18rem;
     height: 18rem;
     border-radius: 50%;
-    will-change: filter;
+    // will-change: filter;
     -webkit-filter: blur(50px);
     filter: blur(50px);
     z-index: 1;
