--- a/metro/src/scss/sections/_section-marketplaces.scss
+++ b/metro/src/scss/sections/_section-marketplaces.scss
@@ -42,7 +42,7 @@
     display: none;
   }
 
-  @media (min-width: 600px) {
+  @media (min-width: 601px) {
     .section-layer {
       padding-bottom: 6.5rem;
     }
@@ -68,6 +68,7 @@
         transition: 0.4s;
         &__info {
           display: flex;
+          gap: 1.5rem;
           flex-direction: column;
           transition: 0.4s;
         }
