--- a/metro/src/scss/sections/_section-marketplaces.scss
+++ b/metro/src/scss/sections/_section-marketplaces.scss
@@ -15,26 +15,27 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      width: calc(100% / 3 - 2rem);
       &__link {
         display: block;
         cursor: pointer;
-
       }
       &__image {
-        width: 9.6rem;
+        width: 20vw;
+        max-width: 9.6rem;
         height: 9.6rem;
         display: flex;
         justify-content: center;
         align-items: center;
         img {
-          max-width: 100%;
+          width: 100%;
           display: block;
+          margin: 0;
         }
       }
       &__name {
         @include text-main;
         color: #a2abb4;
-
       }
     }
   }
